# ChatGX

./: Dockerfile  Dockerfile.Web  LICENSE  README.md  docker-compose.yml  main.py  messanger.db  pyproject.toml
client/: env.js  index.html  messenger.html  script.js  style.css  ui_scripts.js
src/api/dto/: ChatDto.py  UserDto.py
src/api/routers/: chat_router.py  user_router.py  websocket_router.py
src/config/: startup.py
src/data/: __init__.py  config.py  data_storage.py
src/data/dbo/: ChatDbo.py  TokenDbo.py  UserDbo.py
src/data/repository/: chat_repository.py  token_repository.py  user_repository.py
