[tool.poetry]
name = "chatgx"
version = "0.1.0"
description = ""
authors = ["TheMeelord <misha.laptev.03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
websockets = "^12.0"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
